[project]
name = "upscaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "realesrgan>=0.3.0",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "setuptools>=82.0.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
]
